<resources>
    <string name="app_name">AC_app</string>
    <string name="txt_boton">Abrir </string>
    <string name="txt_otravista">Otra vista </string>
    <string name="btn_inicio_sesion">Ingresar </string>

    <string name="perfil">Perfil</string>
    <string name="Nombre_completo">Nombre Completo</string>
    <string name="Rut">Rut</string>
    <string name="Ntelefono">N° de Teléfono</string>
    <string name="empresa">Empresa</string>
    <string name="instalacion">Instalación</string>
    <string name="Nemergencia">N° de Emergencia</string>
    <string name="generatupin">Genera tu PIN</string>
    <string name="cambiatucontrasena">Cambia tu Contraseña</string>
    <string name="editaperfil">Edita tu Perfil</string>
    <string name="cerrarsesion">Cerrar Sesión</string>
    <string name="editaFoto">Edita tu fotografía</string>
    <string name="nombreInstalacion">Nombre Instalación</string>
    <string name="guardarDatos">Guarda tus datos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="noti_modal_PIN">Se ha enviado un código de 6 dígitos, este aparecerá en la campana de notificaciones de tu aplicación.</string>
    <string name="ir_a_noti">Ir a notificaciones</string>
    <string name="selectoption">Selecciona una opción</string>
    <string name="asistencia">Asistencia</string>
    <string name="marcarasistencia">Marcar Asistencia</string>
    <string name="inasistencia">Inasistencia</string>
    <string name="reporte">Reportes</string>
    <string name="horario">Horario</string>
    <string name="cambiarpass">Cambia tu contraseña</string>
    <string name="passactual">Contraseña Actual</string>
    <string name="passnew">Contraseña Nueva</string>
    <string name="infoPass">Recuerda que tu contraseña debe contener números, letras y tener un mínimo de 6 caracteres.</string>
    <string name="actualizar">Actualizar</string>
    <string name="icono_notificaciones">Icono de campana notificaciones</string>
    <string name="N">N</string>
    <string name="mensaje_entrada">Tu código de Ingreso es</string>
    <string name="n_fono">N° de teléfono</string>
    <string name="contrasena">Contraseña</string>
    <string name="olvidepass">¿Olvidaste tu contraseña?</string>
    <string name="hazclickaqui">Haz clic aquí</string>
    <string name="mensajeOlvidePass">• Si tu teléfono es valido te enviaremos un SMS</string>
    <string name="mensajeingresarPin">• Para obtener el pin ingresa a tu perfil desde la página de inicio y busca la opción generar pin.</string>
    <string name="btn_enviar">Enviar</string>
    <string name="btn_description_ingresaralPIN">boton que lleva al ingreso del PIN</string>
    <string name="ingresa_tu_pintexto">Ingresa tu pin</string>
    <string name="aceptar">Aceptar</string>
    <string name="marcar_asistencia_manual">Asistencia / Marcar asistencia / Ingreso Manual</string>
    <string name="mensaje_pin_error">Tu pin es incorrecto, vuelve a intentarlo.</string>
    <string name="volver_inicio">Vuelve al inicio</string>
    <string name="icon_error">icon error</string>


</resources>