<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorprimary"
    tools:context=".EditarPerfilActivity">


    <Button
        android:id="@+id/btnvolver"
        android:layout_width="65dp"
        android:layout_height="58dp"
        android:background="@drawable/icon_volver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.016"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.007"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/btnvolver"
        android:text="@string/perfil"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/btnvolver"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/topesquinas_redondeadas"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:contentDescription="@string/editaFoto"
            app:srcCompat="@drawable/icon_camara" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/editaFoto"
            android:textStyle="bold" />


        <EditText

            android:layout_width="333dp"
            android:layout_height="55dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bordes_textos"
            android:fontFamily="@font/roboto_normal"
            android:hint="@string/Nombre_completo"
            android:inputType="textPersonName"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp"
            android:paddingVertical="8dp"
            android:textColor="@color/colorcaja_txt"
            android:autofillHints="username"
            android:textSize="17sp" />

        <EditText

            android:layout_width="333dp"
            android:layout_height="55dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bordes_textos"
            android:fontFamily="@font/roboto_normal"
            android:hint="@string/Rut"
            android:inputType="textCapCharacters"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp"
            android:paddingVertical="8dp"
            android:textColor="@color/colorcaja_txt"
            android:autofillHints="name"
            android:textSize="17sp" />

        <EditText

            android:layout_width="333dp"
            android:layout_height="55dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bordes_textos"
            android:fontFamily="@font/roboto_normal"
            android:hint="@string/Ntelefono"
            android:inputType="number"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp"
            android:paddingVertical="8dp"
            android:textColor="@color/colorcaja_txt"
            android:autofillHints="phone"
            android:textSize="17sp" />

        <EditText

            android:layout_width="333dp"
            android:layout_height="55dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bordes_textos"
            android:fontFamily="@font/roboto_normal"
            android:hint="@string/empresa"
            android:inputType="textPersonName"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp"
            android:paddingVertical="8dp"
            android:textColor="@color/colorcaja_txt"
            android:autofillHints="name"
            android:textSize="17sp" />

        <EditText

            android:layout_width="333dp"
            android:layout_height="55dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bordes_textos"
            android:fontFamily="@font/roboto_normal"
            android:hint="@string/instalacion"
            android:inputType="textPersonName"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp"
            android:paddingVertical="8dp"
            android:textColor="@color/colorcaja_txt"
            android:autofillHints="name"
            android:textSize="17sp" />

        <EditText

            android:layout_width="333dp"
            android:layout_height="55dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bordes_textos"
            android:fontFamily="@font/roboto_normal"
            android:hint="@string/nombreInstalacion"
            android:inputType="textPersonName"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp"
            android:paddingVertical="8dp"
            android:textColor="@color/colorcaja_txt"
            android:autofillHints="name"
            android:textSize="17sp" />


        <EditText

            android:layout_width="333dp"
            android:layout_height="55dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/bordes_textos"
            android:fontFamily="@font/roboto_normal"
            android:hint="@string/Nemergencia"
            android:inputType="number"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp"
            android:paddingVertical="8dp"
            android:textColor="@color/colorcaja_txt"
            android:autofillHints="phone"
            android:textSize="17sp" />

        <Button
            android:id="@+id/btnPIN"
            android:layout_width="320dp"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:background="@drawable/btn_circular_azul"
            android:text="@string/guardarDatos"
            android:textColor="@color/white"
            android:textSize="17sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>