<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorprimary"
    tools:context=".PerfilActivity">



    <Button
        android:id="@+id/btnvolver"
        android:layout_width="65dp"
        android:layout_height="58dp"
        android:background="@drawable/icon_volver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.016"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.007"
        tools:ignore="SpeakableTextPresentCheck"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:text="@string/perfil"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/btnvolver"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/topesquinas_redondeadas"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="211dp"
            android:layout_height="85dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            android:contentDescription="@string/editaFoto"
            app:srcCompat="@drawable/icon_avatar" />


        <EditText
            android:id="@+id/editText"
            android:layout_width="333dp"
            android:layout_height="55dp"
            android:background="@drawable/bordes_textos"
            android:fontFamily="@font/roboto_normal"
            android:hint="@string/Nombre_completo"
            android:inputType="textPersonName"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp"
            android:paddingVertical="8dp"
            android:textColor="@color/colorcaja_txt"
            android:autofillHints="username"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView10"
            app:layout_constraintVertical_bias="0.010" />


        <EditText

            android:id="@+id/editText2"
            android:layout_width="333dp"
            android:layout_height="55dp"
            android:layout_marginBottom="184dp"
            android:autofillHints="name"
            android:background="@drawable/bordes_textos"
            android:fontFamily="@font/roboto_normal"
            android:hint="@string/Rut"
            android:inputType="textCapCharacters"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp"
            android:textColor="@color/colorcaja_txt"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText"
            app:layout_constraintVertical_bias="0.010" />


        <EditText

            android:id="@+id/editText3"
            android:layout_width="333dp"
            android:layout_height="55dp"
            android:autofillHints="phone"
            android:background="@drawable/bordes_textos"
            android:fontFamily="@font/roboto_normal"
            android:hint="@string/Ntelefono"
            android:inputType="number"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp"
            android:paddingVertical="8dp"
            android:textColor="@color/colorcaja_txt"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText2"
            app:layout_constraintVertical_bias="0.010" />

        <EditText

            android:id="@+id/editText4"
            android:layout_width="333dp"
            android:layout_height="55dp"
            android:autofillHints="name"
            android:background="@drawable/bordes_textos"
            android:fontFamily="@font/roboto_normal"
            android:hint="@string/empresa"
            android:inputType="textPersonName"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp"
            android:paddingVertical="8dp"
            android:textColor="@color/colorcaja_txt"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText3"
            app:layout_constraintVertical_bias="0.010" />


        <EditText

            android:id="@+id/editText5"
            android:layout_width="333dp"
            android:layout_height="55dp"
            android:autofillHints="name"
            android:background="@drawable/bordes_textos"
            android:fontFamily="@font/roboto_normal"
            android:hint="@string/instalacion"
            android:inputType="textPersonName"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp"
            android:paddingVertical="8dp"
            android:textColor="@color/colorcaja_txt"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText4"
            app:layout_constraintVertical_bias="0.010" />


        <EditText

            android:id="@+id/editText6"
            android:layout_width="333dp"
            android:layout_height="55dp"
            android:autofillHints="phone"
            android:background="@drawable/bordes_textos"
            android:fontFamily="@font/roboto_normal"
            android:hint="@string/Nemergencia"
            android:inputType="number"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp"
            android:paddingVertical="8dp"
            android:textColor="@color/colorcaja_txt"
            android:layout_marginTop="4dp"
            android:textSize="17sp"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toTopOf="@+id/btnPIN"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText5"
            app:layout_constraintVertical_bias="0.010" />

        <Button
            android:id="@+id/btnPIN"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_circular_azul"
            android:text="@string/generatupin"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/cambiarPass"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/cambiarPass"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_circular_azul"
            android:text="@string/cambiatucontrasena"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintBottom_toTopOf="@+id/editperfil"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/editperfil"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_circular_azul"
            android:text="@string/editaperfil"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintBottom_toTopOf="@+id/logout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/logout"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:background="@drawable/btn_circular_azul"
            android:text="@string/cerrarsesion"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>