<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorprimary"
    tools:context=".CambiarPassActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <Button
            android:id="@+id/btnvolver"
            android:layout_width="65dp"
            android:layout_height="58dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/icon_volver"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_normal"
            android:text="@string/perfil"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/topesquinas_redondeadas"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">


        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:fontFamily="@font/roboto_normal"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/cambiarpass"
            android:textColor="@color/black"
            android:textSize="26sp" />

        <EditText
            android:layout_width="333dp"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:autofillHints="username"
            android:background="@drawable/bordes_textos"
            android:fontFamily="@font/roboto_normal"
            android:hint="@string/passactual"
            android:inputType="textPassword"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp"
            android:paddingVertical="8dp"
            android:textColor="@color/colorcaja_txt"
            android:textSize="17sp" />
        <EditText
            android:layout_width="333dp"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:autofillHints="username"
            android:background="@drawable/bordes_textos"
            android:fontFamily="@font/roboto_normal"
            android:hint="@string/passnew"
            android:inputType="textPassword"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp"
            android:paddingVertical="8dp"
            android:textColor="@color/colorcaja_txt"
            android:textSize="17sp" />


        <TextView
            android:id="@+id/textView4"
            android:layout_width="338dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_normal"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="20dp"
            android:gravity="start"
            android:minLines="3"
            android:maxLines="3"
            android:text="@string/infoPass"
            android:lineSpacingExtra="4dp"
            android:textColor="@color/black"
            android:textSize="16sp" />


        <Button
            android:id="@+id/btnActualizar"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginBottom="270dp"
            android:background="@drawable/btn_circular_azul"
            android:fontFamily="@font/roboto_normal"
            android:text="@string/actualizar"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintBottom_toTopOf="@+id/logout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />




    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>