<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorprimary"
    tools:context=".AsistenciaActivity">



    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <Button
            android:id="@+id/btnvolver"
            android:layout_width="65dp"
            android:layout_height="58dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/icon_volver"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_normal"
            android:text="@string/asistencia"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/topesquinas_redondeadas"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">


        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:fontFamily="@font/roboto_normal"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/selectoption"
            android:textColor="@color/black"
            android:textSize="26sp" />




        <Button
            android:id="@+id/btnmarcarasistencia"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:background="@drawable/btn_circular_azul"
            android:fontFamily="@font/roboto_normal"
            android:text="@string/marcarasistencia"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@+id/logout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btninasistencia"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_circular_azul"
            android:text="@string/inasistencia"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_normal"
            android:textSize="17sp"
            app:layout_constraintBottom_toTopOf="@+id/cambiarPass"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <Button
            android:id="@+id/btnreporte"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_circular_azul"
            android:text="@string/reporte"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintBottom_toTopOf="@+id/cambiarPass"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnhorario"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginBottom="270dp"
            android:background="@drawable/btn_circular_azul"
            android:text="@string/horario"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintBottom_toTopOf="@+id/cambiarPass"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>