<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/Modal_error_pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">


        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/icon_error"
            android:src="@drawable/icon_error" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="@font/roboto_normal"
            android:gravity="center"
            android:text="@string/mensaje_pin_error"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <Button
            android:id="@+id/vovler_inicio"
            android:layout_width="260dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginBottom="18dp"
            android:background="@drawable/btn_circular_azul"
            android:fontFamily="@font/roboto_normal"
            android:text="@string/volver_inicio"
            android:textColor="@color/white"
            android:textSize="17sp" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>