<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LayoutPrincipalPerfil"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/myContentModal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">


        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/icono_notificaciones"
            android:src="@drawable/campana_notif" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="@font/roboto_normal"
            android:gravity="center"
            android:text="@string/noti_modal_PIN"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <Button
            android:id="@+id/ir_a_notificaciones"
            android:layout_width="260dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:background="@drawable/btn_circular_azul"
            android:fontFamily="@font/roboto_normal"
            android:text="@string/ir_a_noti"
            android:textColor="@color/white"
            android:textSize="17sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>